# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  file1.yml  file2.yml  pyproject.toml
.github/: gendiff.yml
.github/workflows/: gendiff_workflow_check.yml  hexlet-check.yml
gendiff/: __init__.py  differ.py  find_diff.py  gendiff.py  load_files.py  parser.py
gendiff/formatters/: __init__.py  stylish.py
gendiff/scripts/: __init__.py  differ.py  gendiff.py  load_files.py  main.py
gendiff/scripts/formatters/: __init__.py  json.py  plain.py  stylish.py
tests/: __init__.py  test_format_json.py  test_format_plain.py  test_gendiff.py  test_recursive_diff.py  test_yaml_files.py
tests/test_data/expected/: exp_empty_noempty.txt  expected_diff_keys.txt  expected_diff_values.txt  expected_empty_files.txt  expected_json.txt
tests/test_data/input/diff_keys/: file2.json
tests/test_data/input/diff_values/: file1.json  file2.json
